--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <div class="contents-one">
         <h3 class="section-title">アンケート①</h3>
         <div class="btn-wrapper">
-          <a href="#" class="btn one">1~4月生まれの方はこちら</a>
+          <a href="#" class="btn one">1.4.7.10月生まれの方はこちら</a>
         </div>
         <div class="btn-wrapper">
-          <a href="#" class="btn two">5~8月生まれの方はこちら</a>
+          <a href="#" class="btn two">2.5.8.11月生まれの方はこちら</a>
         </div>
         <div class="btn-wrapper">
-          <a href="#" class="btn three">9~12月生まれの方はこちら</a>
+          <a href="#" class="btn three">3.6.9.12月生まれの方はこちら</a>
         </div>
       </div>
       <div class="contents-two">
