--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="contents-one">
         <h3 class="section-title">アンケート①</h3>
         <div class="btn-wrapper">
-          <a href="#" class="btn one">1.4.7.10月生まれの方はこちら</a>
+          <a href="https://docs.google.com/forms/d/1_QZ_19eQ6pARUjejaxu2L9O4oMcOIv6vG7JKFDg3Qlc/edit" class="btn one">1.4.7.10月生まれの方はこちら</a>
         </div>
         <div class="btn-wrapper">
           <a href="#" class="btn two">2.5.8.11月生まれの方はこちら</a>
