--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="https://docs.google.com/forms/d/1_QZ_19eQ6pARUjejaxu2L9O4oMcOIv6vG7JKFDg3Qlc/edit" class="btn one">1.4.7.10月生まれの方はこちら</a>
         </div>
         <div class="btn-wrapper">
-          <a href="#" class="btn two">2.5.8.11月生まれの方はこちら</a>
+          <a href="https://docs.google.com/forms/d/1IU1iVAToTi-AVFMHK3wJ-7eQKVsvCKFM3bGF-F9kL2k/edit" class="btn two">2.5.8.11月生まれの方はこちら</a>
         </div>
         <div class="btn-wrapper">
           <a href="#" class="btn three">3.6.9.12月生まれの方はこちら</a>
