--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="https://docs.google.com/forms/d/1IU1iVAToTi-AVFMHK3wJ-7eQKVsvCKFM3bGF-F9kL2k/edit" class="btn two">2.5.8.11月生まれの方はこちら</a>
         </div>
         <div class="btn-wrapper">
-          <a href="#" class="btn three">3.6.9.12月生まれの方はこちら</a>
+          <a href="https://docs.google.com/forms/d/1ysAA2vle7K4nAcaguGKmVRf0s3TQ4ER0m83hE63QJw4/edit" class="btn three">3.6.9.12月生まれの方はこちら</a>
         </div>
       </div>
       <div class="contents-two">
