--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="contents-two">
         <h3 class="section-title">アンケート②</h3>
         <div class="btn-wrapper">
-          <a href="#" class="btn four">誕生日の日にちが奇数の方はこちら</a>
+          <a href="https://docs.google.com/forms/d/1QoVf2aiyox6szJgfVtMWdbL_MpDspmkwj99juIuhBwk/edit" class="btn four">誕生日の日にちが奇数の方はこちら</a>
 
         </div>
         <div class="btn-wrapper">
