--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         </div>
         <div class="btn-wrapper">
-          <a href="#" class="btn five">誕生日の日にちが偶数の方はこちら</a>
+          <a href="https://docs.google.com/forms/d/1ip4n7eqIRSAn0JNVXkdysEEj7XYMTECpj2xvKfAPBg4/edit" class="btn five">誕生日の日にちが偶数の方はこちら</a>
         </div>
 
       </div>
