--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="main">
       <div class="introduction">
         <h1>ALESS EXPERIMENT<span></span></h1>
-        <h2>私たちは東京大学教養学部の授業、英語二列W(ALESS)の一環で、オンライン調査の信憑性について調べています。匿名のアンケートが2つあります。それぞれに回答して下さい。ご協力お願いします。</h2>
+        <h2>私たちは東京大学教養学部の授業、英語二列W(ALESS)の一環で、オンライン調査の信憑性について調べています。以下の2つの匿名のアンケートでは、個人は特定できないようにしています。それぞれに回答して下さい。ご協力お願いします。</h2>
       </div>
 
       <div class="contents-one">
